<resources>
    <string name="Email">Email</string>
    <string name="SMS">SMS</string>
    <string name="callConfirm">Dialing confirmation</string>
    <string name="contact_group">Groups</string>
    <string name="disable">Disable</string>
    <string name="historyList">History</string>
    <string name="list_filter_phones">All contacts with phone numbers</string>
    <string name="more">More</string>
    <string name="pref_contact_sort_order_title">Sort list by</string>
    <string name="pref_display_auto_group_summary">Including \"All contacts\", \"Ungrouped contacts\".</string>
    <string name="pref_display_system_group_summary">Display system group</string>
    <string name="pref_email_settings_title">Email settings</string>
    <string name="pref_merge_same_name_group_summary">Merge similar named groups</string>
    <string name="pref_message_0toShowAllDays">0 to show all days</string>
    <string name="pref_message_0toShowAllItems">0 to show all items</string>
    <string name="pref_recipients_location_default">to</string>
    <string name="pref_recipients_location_summary">All addresses will be in the %s field</string>
    <string name="pref_send_title">SMS &amp; Email settings</string>
    <string name="pref_send_to">Send to %s</string>
    <string name="pref_send_to_default">pri</string>
    <string name="pref_show_account_name_summary">Show account names below the group names.</string>
    <string name="pref_show_account_name_title">Show account name</string>
    <string name="pref_sms_settings_title">Text message (SMS) settings</string>
    <string name="pref_summary_SMSSendInterval">Send a text message each time interval (in seconds).</string>
    <string name="pref_summary_autoHideTab">Automatic, will hide the tabs after switching to another tab</string>
    <string name="pref_summary_automaticConfirmationDelay">You can touch anywhere on the screen to stop the timer</string>
    <string name="pref_summary_backKeyHideDailpad">If disabled, first click on hardware button back will close application. Otherwise it will hide dialpad before doing exit</string>
    <string name="pref_summary_callConfirm">If enabled, it will show you a popup windows with a confirmation request before dialing</string>
    <string name="pref_summary_clickTheActions">Action when you click the list entry.</string>
    <string name="pref_summary_deleteOldCallLogs">When the number reaches %s, delete old call logs</string>
    <string name="pref_summary_dialPrefix">If prefix is given, there will be an extra options to call them via long press menu</string>
    <string name="pref_summary_dialSuffix">If suffix is given, there will be an extra options to call them via long press menu</string>
    <string name="pref_summary_dialpadToFullWidth">If activated, it will show in landscape mode the dialer to full screen width (otherwise it is on the right side)</string>
    <string name="pref_summary_disableInCarMode">Temporarily disable the Dialing confirmation, when you in the car</string>
    <string name="pref_summary_enableSlidingAction">Enable sliding dial etc. You can turn it off in order to use slide switch numbers.</string>
    <string name="pref_summary_excludeNumbers">Dial these numbers will not show [Dialing confirmation] dialog</string>
    <string name="pref_summary_groupCallLogByDate">If activated, it will group call logs by date</string>
    <string name="pref_summary_languageForT9">You can add extra languages, which should be used for T9-search</string>
    <string name="pref_summary_languageForT9Keyboard">Select the language you want to display in the T9 dial pad.</string>
    <string name="pref_summary_limitCallLogOnXDays">Limit call log on %s days (0 = show all)</string>
    <string name="pref_summary_limitCallLogOnXitems">Limit call log on max %s items (0 = unlimited)</string>
    <string name="pref_summary_matchingAnywhere">\"WTT\" match \"dW conTacTs\"</string>
    <string name="pref_summary_matchingFirstLetter">\"DCO\" match \"Dw COntacts\"</string>
    <string name="pref_summary_matchingPart">\"NTA\" match \"dw coNTActs\"</string>
    <string name="pref_summary_matchingSkipSpace">\"TSPH\" match \"dw contacTS &amp; PHone\"</string>
    <string name="pref_summary_matchingSkipWord">\"DPH\" match \"Dw contacts &amp; PHone\"</string>
    <string name="pref_summary_off_EmailProgram">Prompted to choose when sending messages.</string>
    <string name="pref_summary_on_EmailProgram">Use the default E-mail program.</string>
    <string name="pref_summary_replaceMissedCallNotification">Avoid displaying \"Choose an app\" dialog</string>
    <string name="pref_summary_searchCallLog">Need to open \"Show call log on phone\"</string>
    <string name="pref_summary_showContactsOnPhoneStart">If enabled, all contacts also shown in list</string>
    <string name="pref_summary_showContactsWithPhoneNumber">If disabled, it will use the system [Contact display filtering], which can be adjusted under [Global settings]</string>
    <string name="pref_summary_showCounterOnMergedCallLog">If activated, it will show on the right side of contact name the counter how much calls are merged together</string>
    <string name="pref_summary_showGroupSContactsCount">Open it will affect the contact loading speed.</string>
    <string name="pref_summary_showMyContactsInUngrouped">Show contacts (which are only in system-group \"My Contacts\") under \"Ungrouped contacts\".</string>
    <string name="pref_summary_showNumberKeyboardOnDialpad">If disabled, it will only show the input box, dial and delete icon (useful, if you want to dial always via your hardware keys)</string>
    <string name="pref_summary_smsSignature">Signature, will always be added at the end of SMS/MMS</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message.</string>
    <string name="pref_summary_storeSendSMSToSystemDB">If activated, sent SMS/MMS will stored to system database.</string>
    <string name="pref_summary_t9Search">These are advanced options, which are related on tab phone and how the T9-search will work there</string>
    <string name="pref_summary_useNumberSearch">If activated, it will also search for numbers</string>
    <string name="pref_tabs_summary">You can activate and sort, which tabs should be possible to use</string>
    <string name="pref_title_EmailProgram">E-mail program</string>
    <string name="pref_title_SMSSendInterval">Send interval</string>
    <string name="pref_title_autoHideTab">Hide tab bar</string>
    <string name="pref_title_automaticCancelDelay">Automatic cancel delay</string>
    <string name="pref_title_automaticConfirmationDelay">Automatic confirmation delay</string>
    <string name="pref_title_backKeyHideDailpad">Back key hide dialpad</string>
    <string name="pref_title_calllogFilterAtTop">Display \"Call log filter\" at the top of the screen</string>
    <string name="pref_title_clickTheActions">Click list entry actions</string>
    <string name="pref_title_deleteOldCallLogs">Delete old call logs</string>
    <string name="pref_title_dialPrefix">Dial prefix</string>
    <string name="pref_title_dialSuffix">Dial suffix</string>
    <string name="pref_title_dialerPadTone">Tone on pressing dialer pad</string>
    <string name="pref_title_dialpadIconsArrangement">Dialpad icons arrangement</string>
    <string name="pref_title_dialpadToFullWidth">Dialpad to full screen width</string>
    <string name="pref_title_disableInCarMode">Disable in car mode</string>
    <string name="pref_title_display_auto_group">Show automatic groups</string>
    <string name="pref_title_display_system_group">Show system groups</string>
    <string name="pref_title_email_send">Email</string>
    <string name="pref_title_enableSlidingAction">Enable sliding action</string>
    <string name="pref_title_excludeNumbers">Exclude numbers</string>
    <string name="pref_title_exitWhenCallEnds">Exit when the call ends</string>
    <string name="pref_title_groupCallLogByDate">Show call log group by date</string>
    <string name="pref_title_hapticFeedbackVibration">Haptic feedback vibration</string>
    <string name="pref_title_hideStatistics">Hide statistics</string>
    <string name="pref_title_languageForT9">Language for T9-search</string>
    <string name="pref_title_languageForT9Keyboard">Language for T9-keyboard</string>
    <string name="pref_title_limitCallLogOnXDays">Limit call log on %s days</string>
    <string name="pref_title_limitCallLogOnXitems">Limit call log on max %s items</string>
    <string name="pref_title_matchingAnywhere">Match words anywhere</string>
    <string name="pref_title_matchingFirstLetter">Match the first letter</string>
    <string name="pref_title_matchingPart">Match exact part of word phrase</string>
    <string name="pref_title_matchingSkipSpace">Allows skip space</string>
    <string name="pref_title_matchingSkipWord">Allows skip word</string>
    <string name="pref_title_mergeCallLog">Merge call log</string>
    <string name="pref_title_merge_same_name_group">Merge groups</string>
    <string name="pref_title_phoneSettings">Phone settings</string>
    <string name="pref_title_quickDialLimit">Quick-dial limit</string>
    <string name="pref_title_recipients_location">Recipient anonymity</string>
    <string name="pref_title_replaceMissedCallNotification">Replace \"Missed call notification\"</string>
    <string name="pref_title_reverseList">Reverse List</string>
    <string name="pref_title_searchCallLog">Search call log</string>
    <string name="pref_title_showCallLogOnPhone">Show call log on phone</string>
    <string name="pref_title_showContactsOnPhoneStart">Show contacts on start</string>
    <string name="pref_title_showCounterOnMergedCallLog">Show counter on merged call log items</string>
    <string name="pref_title_showGroupSContactsCount">"Show group's contacts count"</string>
    <string name="pref_title_showMatchFirstLetterResultsFirst">Show \"Match the first letter\" results first</string>
    <string name="pref_title_showMessageLog">Show message log</string>
    <string name="pref_title_showMyContactsInUngrouped">Ignore system-group \"My Contacts\"</string>
    <string name="pref_title_showNumberKeyboardOnDialpad">Show number keyboard on dialpad</string>
    <string name="pref_title_smsSignature">SMS/MMS signature</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_sms_mms_send">SMS/MMS</string>
    <string name="pref_title_sortByDegreeOfMatch">Sorted by degree of match</string>
    <string name="pref_title_startDialerWithoutDialerPad">Start dialer without dialer pad</string>
    <string name="pref_title_storeSendSMSToSystemDB">Store sent SMS/MMS to database</string>
    <string name="pref_title_t9Search">T9 search settings</string>
    <string name="pref_title_tabSettings">Tab settings</string>
    <string name="pref_title_useNumberSearch">Use number in search</string>
    <string name="pref_title_useOrgSearch">Use company in search</string>
    <string name="quickDialManager">Quick dial manager</string>
    <string name="recipients_limit">Limit for number of recipients</string>
    <string name="recipients_limit_summary">When the number of recipients is greater than this value, send in batches automatically</string>
    <string name="save">@string/bt_save</string>
    <string name="seconds">secs</string>
    <string name="show_group_icon">Show group picture</string>
    <string name="show_group_icon_summary">Show each groups icon</string>
    <string name="sms_compatibility_mode_summary">Select this if your SMS program, not the normal reception of telephone numbers. For example: XT800</string>
    <string name="sms_compatibility_mode_title">SMS/MMS send mode</string>
    <string name="using_system_sms_program">Use default SMS program</string>
    <string name="using_system_sms_program_summary">Disable the software SMS send function</string>
</resources>